improve(tasklist): correct vertical alignment of assignee elements

--- a/webapps/ui/tasklist/client/scripts/task/directives/cam-tasklist-task-meta.less
+++ b/webapps/ui/tasklist/client/scripts/task/directives/cam-tasklist-task-meta.less
@@ -13,14 +13,10 @@
       width: auto;
       max-width: 100%;
       height: @line-height-computed;
+    }
 
-      &.set-value {
-        padding-top: 3px;
-      }
-
-      > .glyphicon {
-        top: -3px;
-      }
+    a.unclaim {
+      top: -4px;
     }
   }
 
